Se agrega ruta para la consulta de fechas
