# swagger/swagger.json
@@ -60,6 +60,23 @@
                 }
             }
         },
+        "/fechas/ObtenerFechas": {
+            "get": {
+                "tags": [
+                    "fechas"
+                ],
+                "description": "get fechas",
+                "operationId": "FechasController.ObtenerFechas",
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/.make(map[string]string)"
+                        }
+                    },
+                    "403": {}
+                }
+            }
+        },
         "/seleccion/Seleccionar": {
             "post": {
                 "tags": [
